--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -13,8 +13,12 @@ body {
   margin-inline: auto;
   padding-inline: var(--container-padding-x);
 
-  @mixin tablet{
+  @include tablet-above {
     --container-padding-x: 39px
+  }
+
+  @include desktop-above {
+    --container-padding-x: 55px
   }
 }
 
