--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -10,5 +10,6 @@ $text-subheaders-color: #687480;
 $text-light-color: #fff;
 $text-light-color-hover: #c6c6c6;
 $overlay-color: rgba(0, 0, 0, 0.75);
+$nav-color: #E0E0E0;
 $headers-font: Montserrat, sans-serif;
 $letter-spacing: 3px;
