--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -1,90 +1,44 @@
 .nav {
-  @include desktop {
-    &--top {
-      margin-right: 42px;
-    }
-  }
-
   &__list {
-    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(2, 100px);
+    gap: 24px 28px;
 
-    &--flex {
-      display: none;
-
-      @include desktop {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 24px;
-        justify-content: space-between;
-      }
-    }
-
-    &--aside {
-      display: grid;
-      grid-template-columns: repeat(2, 100px);
-      gap: 24px 28px;
-
-      @include tablet {
-        column-gap: 20px;
-      }
-
-      @include desktop {
-        gap: 30px 96px;
-      }
-    }
-  }
-
-  &__footer {
-    margin-bottom: 80px;
-
-    @include tablet {
-      margin-bottom: 120px;
-    }
-
-    @include desktop {
-      display: none;
-    }
-  }
-
-  &__item {
-    &--left {
-      @include tablet {
-        grid-column: 2/4;
-      }
-    }
-
-    &--right {
-      @include desktop {
-        grid-column: 4/6;
-      }
+    @include on-desktop {
+      grid-template-columns: repeat(2, 169px);
+      gap: 30px 31px;
     }
   }
 
   &__link {
-    display: block;
-    text-decoration: none;
-    color: $background-color;
-    font-size: 16px;
-    line-height: 16px;
+    position: relative;
+    width: fit-content;
     font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: white;
 
-    @include hover(font-weight, 700);
-
-    @include desktop {
-      width: 169px;
-    }
-
-    @include desktop {
+    @include on-desktop {
       font-size: 22px;
-      line-height: 22px;
     }
+  }
 
-    &--footer {
-      color: $black-color;
-      font-size: 14px;
-      line-height: 14px;
-      font-weight: 400;
-      width: fit-content;
-    }
+  &__link::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: -15px;
+    transform: translateY(-50%);
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    opacity: 0;
+    background-color: $color-accent;
+    transition: opacity 0.3s ease;
+  }
+
+  &__link:hover::after {
+    opacity: 1;
   }
 }
