--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,16 +1,12 @@
-$menu-breakpoint: 530px;
-$tablet-min-width: 640px;
-$desktop-min-width: 1280px;
-$background-color: #fff;
-$green-color: #1a5a4c;
-$black-color: #0f0e08;
-$gray-main-color: #687480;
-$gray-second-color: #4e4e4e;
-$orange-color: #f14a27;
-$effect-duration: 0.3s;
-$columns-on-mobile: 2;
-$columns-on-tablet: 6;
-$columns-on-desktop: 12;
-$montserrat: Montserrat, sans-serif;
-$ibm: IBM Plex Sans, sans-serif;
-$swiper-pagination-bottom: 128px;
+$font-family-base: 'IBM Plex Sans', sans-serif;
+$font-weight-base: 400;
+$font-size-base: 16px;
+$color-base: #0f0e08;
+$color-primary: #1a5a4c;
+$color-primary-ligth: #687480;
+$color-secondary: #4e4e4e;
+$color-accent: #f14a27;
+$container-width: 1280px;
+$desktop-width: 1280px;
+$tablet-width: 768px;
+$mobile-width: 320px;
