scroll to top button

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -57,6 +57,7 @@
   }
 
   &__address {
+    position: relative;
     grid-column: 2 / 3;
 
     @include on-tablet {
@@ -114,10 +115,12 @@
     font-size: 12px;
     line-height: 17px;
     font-weight: 300;
+    gap: 10px;
 
     @include on-tablet {
       flex-direction: row;
       justify-content: space-between;
+
     }
   }
 }
