--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -3,7 +3,6 @@
   position: relative;
   max-width: 100%;
   overflow: hidden;
-  scroll-snap-type: x mandatory;
 
   &__images {
     display: flex;
@@ -27,7 +26,6 @@
     @include on-tablet {
       height: 543px;
     }
-
 
     @include on-desktop {
       width: 100%;
@@ -60,6 +58,10 @@
     display: flex;
     justify-content: center;
     gap: 22px;
+
+    @include on-desktop {
+      display: none;
+    }
   }
 
   &__dot {
