--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @import 'blocks/gallery';
 @import 'blocks/footer';
 @import 'blocks/social';
+@import 'blocks/scroll-to-top';
 
 body {
   background: #fff;
