--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -9,9 +9,14 @@
     height: 100%;
     object-fit: cover;
     grid-column: 1/-1;
+    transition: transform $effect-duration;
 
     @include on-desktop {
       grid-column: 1/8;
+    }
+
+    &:hover {
+      transform: scale(1.05);
     }
   }
 
