--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -20,7 +20,7 @@
     background-color: $accent-color;
 
     @include on-tablet {
-      padding: 40px 0;
+      padding: 40px 20px;
       margin-bottom: 0;
     }
   }
