fix logo link, address link, buttons cursor type

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -11,6 +11,7 @@
   border: 1px solid $accent-color;
   height: 50px;
   width: 280px;
+  cursor: pointer;
 
   @include on-tablet {
     height: 70px;
