--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -69,6 +69,13 @@
     }
   }
 
+  &__link {
+    display: block;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
   &__menu {
     padding-top: 40px;
     margin-bottom: 80px;
