--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,10 +3,13 @@
 @import 'typography';
 @import './blocks/container';
 @import './blocks/header';
+@import './blocks/aside';
 @import './blocks/icon';
 @import './blocks/event';
 @import './blocks/lection';
 @import './blocks/gallery';
+@import './blocks/subscribe';
+@import './blocks/footer';
 
 body {
   font-family: $main-font;
@@ -16,19 +19,38 @@ body {
 
 .swiper {
   width: 100%;
-  height: 450px;
+  height: 480px;
+
+  @include onDesktop {
+    visibility: hidden;
+    height: 0;
+  }
+}
+.swiper-wrapper {
+  width: 0;
 }
 .swiper-slide {
   width: 100%;
-  @include onTablet {
-    width: 50%;
-  }
 }
 .swiper-img {
   width: 100%;
-  height: 410px;
+  height: auto;
+}
 
-  @include onTablet {
-    width: 50%;
-  }
+span {
+  font-weight: 500;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+
+#menu-toggle:checked ~ .overlay {
+  display: block;
 }
