--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,7 @@
 .header {
   padding-bottom: 70px;
   position: relative;
+  scroll-behavior: smooth;
 
   @include onTablet {
     padding-bottom: 90px;
@@ -92,6 +93,7 @@
         left: -20px;
         display: inline-block;
         transform: rotate(-90deg);
+        text-decoration: none;
       }
     }
     &-line {
