--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,10 +11,14 @@
 @import './blocks/subscribe';
 @import './blocks/footer';
 
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: $main-font;
   margin: 0;
   padding: 0;
+  // scroll-behavior: smooth;
 }
 
 .swiper {
@@ -42,15 +46,14 @@ span {
 }
 
 .overlay {
+  display: block;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: none;
 }
 
-#menu-toggle:checked ~ .overlay {
-  display: block;
+#menu:target ~ .overlay {
 }
