add task solution

--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -1,14 +1,13 @@
 .menu {
   padding: 27px 0;
 
-  background-color: #1a5a4c;
-  width: 100%;
-  height: auto;
+  background-color: rgba(0, 0, 0, 0.5);
 
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
+  bottom: 0;
 
   transition: all 0.3s;
   opacity: 0;
@@ -31,6 +30,17 @@
   }
 
   &__wrapper {
+    padding: 27px 0;
+    position: fixed;
+    width: 100%;
+    height: auto;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: #1a5a4c;
+  }
+
+  &__content {
     @include onTablet {
       display: grid;
       grid-template-columns: repeat(6, 1fr);
