--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -150,6 +150,7 @@
     font-family: $second-font serif;
     font-size: 16px;
     font-weight: 500;
+    color: #0f0e08;
 
     transition: all 0.3s ease;
 
