--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,10 @@
 @import 'typography';
 
 @import 'blocks/header';
+@import 'blocks/button';
+@import 'blocks/logo';
+@import 'blocks/menu';
+@import 'blocks/events';
 
 
 .visually-hidden {
