add task solution

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -149,6 +149,58 @@
         line-height: 21px;
         color: #0f0e08;
         margin: 20px 0;
+
+        &-link {
+          text-decoration: none;
+          color: #0f0e08;
+          transition: all 0.3s ease;
+
+          @include desktop {
+            &:hover {
+              color: #687480;
+              line-height: 25px;
+            }
+          }
+        }
+      }
+
+      &-tel-link {
+        text-decoration: none;
+        color: #0f0e08;
+        transition: all 0.3s ease;
+
+        @include desktop {
+          &:hover {
+            color: #687480;
+            line-height: 25px;
+          }
+        }
+      }
+
+      &-fax-link {
+        text-decoration: none;
+        color: #0f0e08;
+        transition: all 0.3s ease;
+
+        @include desktop {
+          &:hover {
+            color: #687480;
+            line-height: 25px;
+          }
+        }
+      }
+
+      &-mail-link {
+        text-decoration: none;
+        color: #0f0e08;
+        transition: all 0.3s ease;
+
+        @include desktop {
+          &:hover {
+            color: #687480;
+            line-height: 25px;
+          }
+        }
       }
     }
   }
