--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -131,10 +131,20 @@
     @include onTablet {
       max-width: 220px;
     }
+    @include onDesktop {
+      width: 100%;
+    }
     &-title {
       margin: 0;
       margin-bottom: 20px;
       font-weight: 400;
+    }
+    &-info a {
+      font-family: $second-font;
+      text-decoration: none;
+      color: #0f0e08;
+      font-size: 14px;
+      line-height: 21px;
     }
   }
 
