--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -146,6 +146,7 @@
     height: 50px;
     width: 100%;
     border: 1px solid #1a5a4c;
+    background-color: #fff;
     padding-right: 30px;
     font-family: $second-font serif;
     font-size: 16px;
