--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,9 @@
 @import 'blocks/logo';
 @import 'blocks/menu';
 @import 'blocks/events';
+@import 'blocks/event';
+@import 'blocks/title';
+@import 'blocks/lecture';
 
 
 .visually-hidden {
