section gallery start

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,13 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
 @import 'blocks/header';
-@import 'blocks/button';
 @import 'blocks/logo';
 @import 'blocks/menu';
 @import 'blocks/events';
 @import 'blocks/event';
-@import 'blocks/title';
 @import 'blocks/lecture';
+@import 'blocks/gallery';
 
 
 .visually-hidden {
@@ -25,7 +23,6 @@
 
 .visible-mobile {
   @include mobile-above {
-
     display: none !important;
   }
 }
