--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -22,5 +22,37 @@ body {
   }
 }
 
+.title {
+  font-family: var(--font-family-second);
+  font-size: 36px;
+  font-weight: 700;
+  text-align: center;
+
+  @include tablet-above {
+    text-align: left;
+    font-size: 48px;
+  }
+}
+
+.button {
+  position: relative;
+  height: 100%;
+  aspect-ratio: 1;
+  border: none;
 
 
+  &--color-green {
+    background-color: var(--color-green);
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      translate: -50% -50%;
+      background: url(../images/icons/arrow.svg) center/contain no-repeat;
+      width: 7px;
+      height: 12px;
+    }
+  }
+}
