--- a/src/styles/blocks/_lecture.scss
+++ b/src/styles/blocks/_lecture.scss
@@ -47,6 +47,7 @@
 
     max-width: 430px;
     margin: 0 auto;
+    border-bottom: 2px solid var(--color-green);
 
     @include tablet-above {
       padding: 45px 55px;
