--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,8 @@
 @import 'blocks/event';
 @import 'blocks/lecture';
 @import 'blocks/gallery';
+@import 'blocks/subscribe';
+@import 'blocks/footer';
 
 
 .visually-hidden {
