--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -1,6 +1,6 @@
 .gallery {
 
-
+  padding-bottom: 92px;
 
   &__title {
     margin-bottom: 40px;
@@ -22,6 +22,9 @@
     align-items: center;
     row-gap: 20px;
 
+    overflow-x: hidden;
+
+
     @include tablet-above {
       row-gap: 32px;
     }
@@ -30,8 +33,20 @@
 
   &__image {
     object-fit: cover;
+    object-position: top;
     width: 100%;
+    height: 100%;
+    max-height: 410px;
 
+    @include tablet-above {
+      max-height: 543px;
+    }
+
+    @include desktop-above {
+      height: auto;
+      max-height: 100%;
+      margin-bottom: 56px;
+    }
 
   }
 
@@ -40,6 +55,8 @@
 
   &__list {
     @include grid-template;
+
+
   }
 
   &__item {
@@ -67,15 +84,17 @@
     }
   }
 
-  &__image {}
-
-  &__image--wide {}
-
-
-
   &__pagination-list {
     display: flex;
     gap: 22px;
+
+    @include tablet-above {
+      grid-column: span 3;
+    }
+
+    @include desktop-above {
+      display: none;
+    }
   }
 
   &__pagination-item {
