--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -36,13 +36,25 @@ body {
 
 .button {
   position: relative;
-  height: 100%;
-  aspect-ratio: 1;
+  height: 50px;
+  width: 50px;
   border: none;
 
+  @include tablet-above {
+    height: 70px;
+    width: 70px;
+  }
 
   &--color-green {
     background-color: var(--color-green);
+  }
+
+  &--color-orange {
+    background-color: var(--color-orange);
+  }
+
+  &--color-green,
+  &--color-orange {
 
     &::after {
       content: '';
