--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -47,24 +47,53 @@ body {
 
   &--color-green {
     background-color: var(--color-green);
+
+    &::after {
+      background: url(../images/icons/arrow-white.svg) center/contain no-repeat;
+    }
   }
 
   &--color-orange {
     background-color: var(--color-orange);
-  }
-
-  &--color-green,
-  &--color-orange {
 
     &::after {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      translate: -50% -50%;
-      background: url(../images/icons/arrow.svg) center/contain no-repeat;
-      width: 7px;
-      height: 12px;
+      background: url(../images/icons/arrow-black.svg) center/contain no-repeat;
     }
   }
+
+  &--arrow-up {
+    background-color: transparent;
+    border-radius: 50%;
+    border: var(--border);
+
+    &::after {
+      background: url(../images/icons/arrow-up.svg) center/contain no-repeat;
+      width: 10px;
+      height: 12px;
+    }
+
+  }
+
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    width: 7px;
+    height: 12px;
+
+  }
+}
+
+.logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 36px;
+  letter-spacing: 0;
+  line-height: 1;
+
 }
