--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,4 +1,47 @@
 .menu {
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px 30px;
+  }
+
+  &__link {
+    transition: all .3s;
+    display: inline-block;
+    width: fit-content;
+    transition: all 0.3s;
+    position: relative;
+
+    &:after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 1px;
+      left: 0;
+      bottom: -5px;
+      background-color: var(--color-green);
+      transition: all 0.3s;
+    }
+
+    @include hover {
+      &::after {
+        width: 100%;
+      }
+    }
+  }
+}
+
+
+
+
+
+
+/*
+
+
+
+
+.menu {
   // position: fixed;
   top: 0;
 
