--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -7,7 +7,6 @@
     @include grid-template;
 
     position: relative;
-
   }
 
   &__top {
@@ -25,12 +24,19 @@
     }
   }
 
-  &__logo {}
+  &__logo {
+    cursor: pointer;
+    transition: all 0.5s;
+
+    @include hover {
+      transform: scale(1.2) rotate(360deg);
+    }
+  }
 
   &__socials {
     display: flex;
     gap: 20px;
-
+    cursor: pointer;
   }
 
   &__facebook,
@@ -52,7 +58,6 @@
       grid-column: span 2;
     }
 
-
     @include desktop-above {
       grid-column: 3/5;
     }
@@ -62,6 +67,10 @@
   &__contacts {
     display: flex;
     flex-direction: column;
+
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
 
     @include tablet-above {
       grid-column: span 2;
@@ -80,13 +89,13 @@
         bottom: 0;
         right: -65px;
         background-color: var(--color-green);
+      }
 
+      &:not(:last-child) {
+        margin-bottom: 0px;
       }
     }
 
-    &:not(:last-child) {
-      margin-bottom: 20px;
-    }
   }
 
   &__name {
@@ -117,9 +126,16 @@
     padding-top: 64px;
     border-top: var(--border);
 
+    &:not(:last-child) {
+      margin-bottom: 80px;
+    }
 
     @include tablet-above {
       grid-column: 2/6;
+
+      &:not(:last-child) {
+        margin-bottom: 120px;
+      }
     }
 
     @include desktop-above {
@@ -127,12 +143,10 @@
       border-top: none;
       margin-top: 0;
       padding-top: 0;
-    }
 
-
-
-    &:not(:last-child) {
-      margin-bottom: 80px;
+      &:not(:last-child) {
+        margin-bottom: 0px;
+      }
     }
 
   }
@@ -153,6 +167,10 @@
       flex-direction: row;
       justify-content: space-between;
     }
+
+    @include desktop-above {
+      margin-top: 60px;
+    }
   }
 
   &__arrow-up {
@@ -169,78 +187,10 @@
       :after {
         color: #fff;
       }
-
     }
-
 
     @include tablet-above {
       display: none;
     }
   }
-}
-
-.container {}
-
-.schedule {
-
-  font-size: 14px;
-  line-height: 1.5;
-  font-weight: 400;
-
-  &__name {
-
-    &:not(:last-child) {
-      margin-bottom: 20px;
-    }
-  }
-
-  &__list {
-    &:not(:last-child) {
-      margin-bottom: 20px;
-    }
-  }
-
-  &__time {
-    font-weight: 600;
-  }
-
-  &__text {}
-}
-
-.menu {
-
-  &__list {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px 30px;
-  }
-
-  &__link {
-    transition: all .3s;
-    display: inline-block;
-    width: fit-content;
-    transition: all 0.3s;
-    position: relative;
-
-    &:after {
-      content: '';
-      position: absolute;
-      width: 0;
-      height: 1px;
-      left: 0;
-      bottom: -5px;
-      background-color: var(--color-green);
-      transition: all 0.3s;
-    }
-
-    @include hover {
-      &::after {
-        width: 100%;
-      }
-    }
-
-
-  }
-
-
 }
