--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import 'blocks/header';
 @import 'blocks/logo';
 @import 'blocks/menu';
+@import 'blocks/schedule';
 @import 'blocks/events';
 @import 'blocks/event';
 @import 'blocks/lecture';
