--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,58 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "../styles/block/header";
+@import "../styles/block/icon";
+@import "../styles/block/menu";
+@import "../styles/block/nav";
+@import "../styles/block/page";
+@import "../styles/block/events";
+@import "../styles/block/schedule";
+@import "../styles/block/galery";
+@import "../styles/block/swiper";
+@import "../styles/block/subscription";
+@import "../styles/block/footer";
+@import "../styles/block/top-bar";
+@import "../styles/block/event";
 
-body {
-  background: $c-gray;
+
+* {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+}
+
+.main {
+  &__content {
+    padding-block-start: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    row-gap: 100px;
+
+    @include on-tablet {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      row-gap: 88px;
+      padding-block: 88px 0;
+    }
+
+    @include on-desctop {
+      row-gap: 200px;
+      padding-block: 200px 0;
+    }
+  }
+}
+
+.container {
+  padding-inline: 20px;
+
+  @include on-tablet {
+    padding-inline: 34px;
+  }
+
+  @include on-desctop {
+    padding-inline: 55px;
+  }
 }
