--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,8 +1,13 @@
 .menu {
+
+  display: none;
+
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px 30px;
+
+    margin-inline: auto;
   }
 
   &__link {
@@ -29,6 +34,87 @@
       }
     }
   }
+
+  &__close {
+    display: flex;
+    border: none;
+    background: transparent;
+    width: 24px;
+    height: 24px;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+  }
+
+  &__wrapper {
+
+    display: flex;
+    padding-top: 26px;
+    padding-bottom: 26px;
+    flex-direction: column;
+
+
+    @include tablet-above {
+      padding-top: 40px;
+      padding-bottom: 40px;
+      flex-direction: row;
+    }
+
+    @include desktop-above {
+      padding-top: 40px;
+      padding-bottom: 48px;
+    }
+  }
+
+  &__main {
+    flex: 1 1 45%;
+    display: flex;
+    align-items: start;
+    column-gap: 28px;
+
+    margin-bottom: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #fff;
+
+    @include tablet-above {
+      margin-bottom: 0px;
+      padding-bottom: 0px;
+      border-bottom: none;
+    }
+  }
+
+  &__schedule {
+    flex: 1 1 55%;
+
+
+
+    @include tablet-above {
+      display: flex;
+      column-gap: 30px;
+      flex-wrap: wrap;
+
+      padding-left: 38px;
+      border-left: 1px solid #fff;
+    }
+
+    @include desktop-above {
+      padding-left: 102px;
+    }
+
+    &-name {
+      flex: 1 1 100%;
+    }
+
+    &-list {
+      flex: 0 0 170px;
+    }
+
+    &-info {
+      flex: 0 0 144px;
+    }
+
+  }
+
 }
 
 
@@ -37,9 +123,6 @@
 
 
 /*
-
-
-
 
 .menu {
   // position: fixed;
@@ -121,3 +204,4 @@
 
   &__highliter {}
 }
+*/
