--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -6,6 +6,10 @@ body {
   line-height: 1.28;
   color: var(--color-dark);
   background-color: var(--color-gray-light);
+
+  // overflow: hidden;
+  // background: grey;
+
 }
 
 .container {
@@ -39,10 +43,12 @@ body {
   height: 50px;
   width: 50px;
   border: none;
+  right: -2px;
 
   @include tablet-above {
     height: 70px;
     width: 70px;
+    right: 0;
   }
 
   &--color-green {
